--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "url": "git+https://github.com/oasis-tcs/odata-openapi.git"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=18.0.0"
   },
   "files": [
     "lib/*"
@@ -21,6 +21,7 @@
   "exports": "./lib/csdl2openapi.js",
   "dependencies": {
     "@discoveryjs/json-ext": "^0.6.3",
+    "odata2openapi": "^1.3.2",
     "odata-csdl": "^0.11.1"
   },
   "devDependencies": {
@@ -28,15 +29,19 @@
     "ajv": "^8.17.1",
     "ajv-draft-04": "^1.0.0",
     "ajv-formats": "^3.0.1",
-    "c8": "^10.1.2",
-    "eslint": "^9.13.0",
-    "mocha": "^10.8.1"
+    "c8": "^10.1.3",
+    "eslint": "^9.27.0",
+    "mocha": "^11.5.0"
   },
   "scripts": {
     "build": "node lib/transform.js",
     "pretest": "rm -f examples/PingTest_V1.no-batch.openapi3.json && node lib/cli.js -p --skipBatchPath -t examples/PingTest_V1.no-batch.openapi3.json examples/PingTest_V1.xml",
     "test": "c8 --100 mocha",
-    "watch": "mocha --watch"
+    "watch": "mocha --watch",
+    "odata-openapi3": "node lib/cli.js",
+    "odata-openapi": "node csdl2openapi",
+    "odata2openapi": "node lib/convert.js --metadata examples/PingTest_V1.xml --output examples/PingTest_V1.openapi3.json",
+    "odata2openapi-no-batch": "node lib/convert.js --metadata examples/PingTest_V1.xml --output examples/PingTest_V1.no-batch.openapi3.json --skipBatchPath"
   },
   "author": "",
   "keywords": [
