--- a/package.json
+++ b/package.json
@@ -20,28 +20,33 @@
   "main": "./lib/csdl2openapi.js",
   "exports": "./lib/csdl2openapi.js",
   "dependencies": {
+    "@sap/cds-dk": "^8.9.4",
     "@discoveryjs/json-ext": "^0.6.3",
+    "odata-csdl": "^0.11.1",
+    "cds-swagger-ui-express": "^0.10.0",
+    "openapi3-ts": "^4.4.0",
     "odata2openapi": "^1.3.2",
-    "odata-csdl": "^0.11.1"
+    "swagger2openapi": "^7.0.8"
   },
   "devDependencies": {
     "@apidevtools/openapi-schemas": "^2.1.0",
     "ajv": "^8.17.1",
     "ajv-draft-04": "^1.0.0",
     "ajv-formats": "^3.0.1",
-    "c8": "^10.1.3",
-    "eslint": "^9.27.0",
-    "mocha": "^11.5.0"
+    "c8": "^10.1.2",
+    "eslint": "^9.13.0",
+    "@types/node": "^22.10.0",
+    "mocha": "^10.8.1"
   },
   "scripts": {
     "build": "node lib/transform.js",
     "pretest": "rm -f examples/PingTest_V1.no-batch.openapi3.json && node lib/cli.js -p --skipBatchPath -t examples/PingTest_V1.no-batch.openapi3.json examples/PingTest_V1.xml",
     "test": "c8 --100 mocha",
     "watch": "mocha --watch",
-    "odata-openapi3": "node lib/cli.js",
-    "odata-openapi": "node csdl2openapi",
-    "odata2openapi": "node lib/convert.js --metadata examples/PingTest_V1.xml --output examples/PingTest_V1.openapi3.json",
-    "odata2openapi-no-batch": "node lib/convert.js --metadata examples/PingTest_V1.xml --output examples/PingTest_V1.no-batch.openapi3.json --skipBatchPath"
+    "convert": "node convert.js",
+    "openapi2to3": "swagger2openapi openapi-v2.json -o openapi-v3.json",
+    "openapi2to3ts": "swagger2openapi openapi-v2.json -o openapi-v3.ts --typescript",
+    "openapi3to2": "openapi3-ts convert -i openapi-v3.json -o openapi-v2.json"
   },
   "author": "",
   "keywords": [
