--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
   "exports": "./lib/csdl2openapi.js",
   "dependencies": {
     "@sap/cds-dk": "^8.9.4",
+    "odata-v4-server": "^0.2.13",
+    "express": "^5.1.0",
     "@discoveryjs/json-ext": "^0.6.3",
     "odata-csdl": "^0.11.1",
+    "odata-openapi": "^0.28.2",
     "cds-swagger-ui-express": "^0.10.0",
     "openapi3-ts": "^4.4.0",
     "odata2openapi": "^1.3.2",
@@ -36,6 +39,7 @@
     "c8": "^10.1.2",
     "eslint": "^9.13.0",
     "@types/node": "^22.10.0",
+    "@types/express": "^5.0.2",
     "mocha": "^10.8.1"
   },
   "scripts": {
@@ -43,7 +47,9 @@
     "pretest": "rm -f examples/PingTest_V1.no-batch.openapi3.json && node lib/cli.js -p --skipBatchPath -t examples/PingTest_V1.no-batch.openapi3.json examples/PingTest_V1.xml",
     "test": "c8 --100 mocha",
     "watch": "mocha --watch",
+    "express": "node ./mock-odata/server.js",
     "convert": "node convert.js",
+    "convertv3": "odata-openapi3 metadata.xml -o metadata.openapi-v3.json",
     "openapi2to3": "swagger2openapi openapi-v2.json -o openapi-v3.json",
     "openapi2to3ts": "swagger2openapi openapi-v2.json -o openapi-v3.ts --typescript",
     "openapi3to2": "openapi3-ts convert -i openapi-v3.json -o openapi-v2.json"
